--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row><span>LiveTest</span></mat-toolbar-row>
 </mat-toolbar>
+
+<router-outlet></router-outlet>
