--- a/src/app/components/signin/signin.component.html
+++ b/src/app/components/signin/signin.component.html
@@ -8,15 +8,18 @@
       name="input-user"
       id="input-user"
       required
+      [(ngModel)]="user.ID"
     />
   </mat-form-field>
   <mat-form-field>
     <mat-label>Curso</mat-label>
-    <mat-select>
+    <mat-select [(value)]="user.COURSE">
       <mat-option *ngFor="let course of courses" [value]="course.NOMBRE">
         {{ course.NOMBRE }}
       </mat-option>
     </mat-select>
   </mat-form-field>
-  <button mat-flat-button color="accent">Iniciar Sesión</button>
+  <button mat-flat-button color="accent" (click)="signin()">
+    Iniciar Sesión
+  </button>
 </div>
