validate valid session

--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -6,6 +6,7 @@
     <span>Cerrar sesión</span>
   </button>
 </mat-menu>
+<h2 class="title">Administrador</h2>
 <button mat-fab color="accent" class="fab" (click)="newCourse()">
   <mat-icon>add</mat-icon>
 </button>
