--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -1,1 +1,9 @@
-<p>user works!</p>
+<button mat-icon-button [matMenuTriggerFor]="menu" class="icon__container">
+  <mat-icon class="icon">more_vert</mat-icon>
+</button>
+<mat-menu #menu="matMenu">
+  <button mat-menu-item (click)="signout()">
+    <span>Cerrar sesión</span>
+  </button>
+</mat-menu>
+<h2 class="title">{{ user.ID }}</h2>
