--- a/src/app/components/signin/signin.component.html
+++ b/src/app/components/signin/signin.component.html
@@ -1,25 +1,27 @@
 <div class="container">
-  <h2 class="container__title">Inicio de sesión</h2>
-  <mat-form-field>
-    <input
-      matInput
-      type="text"
-      placeholder="Usuario"
-      name="input-user"
-      id="input-user"
-      required
-      [(ngModel)]="user.ID"
-    />
-  </mat-form-field>
-  <mat-form-field>
-    <mat-label>Curso</mat-label>
-    <mat-select [(value)]="user.COURSE">
-      <mat-option *ngFor="let course of courses" [value]="course.NOMBRE">
-        {{ course.NOMBRE }}
-      </mat-option>
-    </mat-select>
-  </mat-form-field>
-  <button mat-flat-button color="accent" (click)="signin()">
-    Iniciar Sesión
-  </button>
+  <h2 class="sign__title">Inicio de sesión</h2>
+  <form (ngSubmit)="signin()" class="sign__form">
+    <mat-form-field>
+      <input
+        matInput
+        type="text"
+        placeholder="Usuario"
+        name="input-user"
+        id="input-user"
+        required
+        [(ngModel)]="user.ID"
+      />
+    </mat-form-field>
+    <mat-form-field>
+      <mat-label>Curso</mat-label>
+      <mat-select [(value)]="user.COURSE">
+        <mat-option *ngFor="let course of courses" [value]="course.NOMBRE">
+          {{ course.NOMBRE }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+    <button mat-flat-button color="accent">
+      Iniciar Sesión
+    </button>
+  </form>
 </div>
