delete course implemented. sign in fixed

--- a/src/app/components/modulo/course/course.component.html
+++ b/src/app/components/modulo/course/course.component.html
@@ -5,7 +5,13 @@
     </mat-card-header>
     <mat-card-actions align="end">
       <button mat-button color="accent" (click)="viewCourse(course)">
-        Ver preguntas
+        Ver
+      </button>
+      <button mat-button color="accent" (click)="editCourse(course)">
+        Editar
+      </button>
+      <button mat-button color="accent" (click)="deleteCourse(course)">
+        Eliminar
       </button>
     </mat-card-actions>
   </mat-card>
