create and edit questions

--- a/src/app/components/user/user.component.html
+++ b/src/app/components/user/user.component.html
@@ -10,6 +10,6 @@
   </button>
 </mat-menu>
 
-<h2 class="title">{{ user.ID }}</h2>
+<h2 class="title">{{ user.IDENTIFICACION }}</h2>
 
 <router-outlet name="user"></router-outlet>
