--- a/src/app/components/modulo/question/question.component.html
+++ b/src/app/components/modulo/question/question.component.html
@@ -1,7 +1,10 @@
-<div class="container">
+<div
+  class="container"
+  *ngIf="questions != null && questions.length > 0; else addQuestion"
+>
   <mat-card *ngFor="let question of questions">
     <mat-card-header>
-      <mat-card-title>{{ question.COURSE }}</mat-card-title>
+      <mat-card-title>{{ course.NOMBRE }}</mat-card-title>
     </mat-card-header>
     <mat-card-content>
       {{ question.SENTENCE }}
@@ -19,13 +22,33 @@
         Responder
       </button>
       <button
-        *ngIf="user.ID == 'admin'"
+        *ngIf="user.IDENTIFICACION == 'admin'"
         mat-button
         color="accent"
-        (click)="answerQuestion(question)"
+        (click)="editQuestion(question)"
       >
         Editar
+      </button>
+      <button
+        *ngIf="user.IDENTIFICACION == 'admin'"
+        mat-button
+        color="accent"
+        (click)="deleteQuestion(question)"
+      >
+        Eliminar
       </button>
     </mat-card-actions>
   </mat-card>
 </div>
+<ng-template class="container" #addQuestion>
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>No hay preguntas</mat-card-title>
+    </mat-card-header>
+    <mat-card-actions align="end"> </mat-card-actions>
+  </mat-card>
+</ng-template>
+
+<button mat-fab color="accent" class="fab" (click)="newQuestion()">
+  <mat-icon>add</mat-icon>
+</button>
