--- a/src/app/components/signin/signin.component.html
+++ b/src/app/components/signin/signin.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <h2 class="sign__title">Inicio de sesión</h2>
-  <form (ngSubmit)="signin()" class="sign__form">
+  <form (ngSubmit)="signin()" class="form">
     <mat-form-field>
       <input
         matInput
