--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-  <mat-toolbar-row><span>LiveTest</span></mat-toolbar-row>
+  <mat-toolbar-row class="toolbar__row"><span>LiveTest</span></mat-toolbar-row>
 </mat-toolbar>
 
 <router-outlet></router-outlet>
