--- a/src/styles.css
+++ b/src/styles.css
@@ -9,6 +9,13 @@ body {
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
+.icon__container {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 0.5rem;
+}
+
 .icon {
   color: #ffffff;
 }
